--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <script>
+    // Allow window to listen for a postMessage
+        window.addEventListener("message", (event)=>{
+            console.log('Parent', event);
+            
+    // Normally you would check event.origin
+            // To verify the targetOrigin matches
+            // this window's domain
+            //let txt=document.querySelector('#txtMsg');
+            // event.data contains the message sent
+            //txt.value=`Name is ${event.data.pName} Age is  ${event.data.pAge}` ;
+          
+        });
+    </script>
+</head>
 <!--<body style="background-color:#FDFDFD">-->
 <body style="background-color:#CCC">
     <div>Hello</div>
