--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
 <!--<body style="background-color:#FDFDFD">-->
 <body style="background-color:#CCC">
     <div>Hello</div>
-    <iframe id="user_tiles_iframe"
-                frameborder="0"
-                title="User Summary Tiles"
+    <iframe id="canvas-inner-_:SuccessPro_Widget:mycanvas0" 
+    name="canvas-inner-_:SuccessPro_Widget:mycanvas0" 
+    title="SuccessPro Widget" 
+    allow="geolocation *; microphone *; camera *" 
+    frameborder="0" width="100%" height="100%" scrolling="auto" 
+    style="display: inline;"
                 src="https://fabianlema15.github.io/testMessage/">
             </iframe>
 </body>
